# OOP-Labs

./: CMakeLists.txt  main.cpp  solve.cpp  solve.h  tests.cpp
Lab_05/include/: allocator.h
Lab_1/: main.cpp  solve.cpp
Lab_2/: CMakeLists.txt  solve1.cpp  tests.cpp
Lab_3/: CMakeLists.txt  array.cpp  array.h  figure.cpp  figure.h  hexagon.cpp  hexagon.h  octagon.cpp  octagon.h  point.cpp  point.h  tests.cpp  triangle.cpp  triangle.h
Lab_4/: CMakeLists.txt  array.cpp  array.h  figure.cpp  figure.h  hexagon.cpp  hexagon.h  main.cpp  octagon.cpp  octagon.h  point.cpp  point.h  tests.cpp  triangle.cpp  triangle.h
Lab_4/header/: array.h  figure.h  hexagon.h  octagon.h  point.h  triangle.h
Lab_4/tests/: tests.cpp
Lab_5/: CMakeLists.txt  main.cpp
Lab_5/include/: node.h  queue.h
Lab_5/test/: test.cpp
Lab_6/: CMakeLists.cpp  main.cpp  tests.cpp
Lab_6/include/: DataMethods.h  Dragon.h  Factory.h  Knight.h  NPC.h  Observers.h  Pegasus.h
Lab_6/src/: DataMethods.cpp  Dragon.cpp  Factory.cpp  Knight.cpp  NPC.cpp  Observers.cpp  Pegasus.cpp
beta/: CMakeLists.txt
include/: iterator.h
